--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,8 @@ override.tf.json
 *.lock.hcl
 
 # Ignore environment variable file:
-.env
+terraform.env
+*.env
 
 # Ignore log files:
 *.log
-servers.txt
